--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -36,7 +36,7 @@
             </thead>
             <tbody>
             <tr th:each="Camera : ${cameraList}">
-                <td>[[${Camera.cameraId}]]</td>
+                <td><a th:href="@{/history(cameraId=${Camera.cameraId})}">[[${Camera.cameraId}]]</a></td>
                 <td>[[${Camera.cameraState}]]</td>
                 <td>[[${Camera.cameraModel}]]</td>
                 <td>[[${Camera.serialNo}]]</td>
